tests/NormalTests/paczka1/small_fuzzy/92942583.err
Error in line 4: S218 S218 32,81
Error in line 10: 6jmqTv A855 56,3
Error in line 11: S218 S218 37,9
